@@ -1,20 +1,3 @@
-as.function.formula <- function(x, ...) {
-	vars <- all.vars(x[[2]])
-	if (length(vars) == 0) { 
-		f <- function() {}
-	} else {
-		f <- function(x) {}
-		formals(f) <- rep(formals(f), length(vars))
-		names(formals(f)) <- vars
-	}
-	body(f) <- x[[length(x)]]
-	environment(f) <- environment(x)
-	f
-}
-
-match.funfn <- function(x, ...) UseMethod("match.funfn")
-match.funfn.default <- base::match.fun
-match.funfn.formula <- as.function.formula
 
 aggregatefn <- function(x, by, FUN, ..., simplify = FALSE) {
 	FUN <- match.funfn(FUN)
@@ -85,3 +68,4 @@ Vectorizefn <- function(..., SIMPLIFY = TRUE) {
 		do.call(SIMPLIFY, Vectorize(..., SIMPLIFY = FALSE))
 	else Vectorize(..., SIMPLIFY = SIMPLIFY)
 }
+
